修复物品保存问题